Implement get user by id
